<resources>
    <string name="market_app_name">SinaAppMarket</string>
    <string name="market_title_activity_main">应用市场</string>
    <string name="market_title_activity_app_list">应用中心</string>
    <string name="market_title_activity_app_detail">应用详情</string>
    <string name="market_title_activity_app_download">下载管理</string>
    <string name="market_downtime_send_weibo">下载发微博</string>
    <string name="market_title_fragment_recommend">热门</string>
    <string name="market_title_fragment_rank">排行</string>
    <string name="market_title_fragment_app">应用</string>
    <string name="market_title_fragment_game">游戏</string>
    <string name="market_title_fragment_download">下载</string>
    <string name="market_title_fragment_subject">专题</string>
    <string name="market_title_fragment_update">更新</string>
    <string name="market_comment_hint_text">发点评，抢沙发...</string>
    <string name="market_comment_hint_text2">和好友分享使用体验</string>
    <string name="market_no_search_history">暂无搜索记录</string>
    <string name="market_clear_search_history">清除搜索记录</string>
    <string name="market_input_search">搜一下 啥都有</string>
    <string name="market_search">搜索</string>
    <string name="market_search_app">应用</string>
    <string name="market_search_failure">抱歉，没有搜到相关的内容，看看好友在搜啥</string>
    <string name="market_search_correct">您要找的是不是:%s</string>
    <string name="market_expend_info">详情信息</string>
    <string name="market_app_detail_title">详细介绍</string>
    <string name="market_request_succ">请求成功!</string>
    <string name="market_request_fail">请求失败!</string>
    <string name="market_request_out_times">亲，今天超次哦，下次再来吧!</string>
    <string name="market_retract_info">隐藏信息</string>
    <string name="market_comment_str">点评</string>
    <string name="market_comment_progress">点评加载中..</string>
    <string name="market_comment_more">更多点评</string>
    <string name="market_progress">加载中....</string>
    <string name="market_loading">请稍候....</string>
    <string name="market_cancel">取消</string>
    <string name="market_report_ok">确定</string>
    <string name="market_more">更多</string>
    <string name="market_sd_smallsize">SD卡剩余空间不足</string>
    <string name="market_no_sdcard">SD卡已拔出</string>
    <string name="market_network_error">网络连接异常，请检查网络设置</string>
    <string name="market_fail_reload">网络不给力哦！点击刷新</string>
    <string name="market_data_error">服务器数据异常</string>
    <string name="market_uplate">更新</string>
    <string name="market_download">下载</string>
    <string name="market_downloading">正在下载</string>
    <string name="market_installing">安装中</string>
    <string name="market_installed">已安装</string>
    <string name="market_install">安装</string>
    <string name="market_open">打开</string>
    <string name="market_pause">暂停</string>
    <string name="market_continue">继续</string>
    <string name="market_using">使用中</string>
    <string name="market_share">转发</string>
    <string name="market_download_completed">下载完成</string>
    <string name="market_install_completed">安装完成</string>
    <string name="market_download_stoped">下载中断，请稍后下载</string>
    <string name="market_download_continue">点击下载</string>
    <string name="market_status_waiting">等待中...</string>
    <string name="market_status_stop">下载失败</string>
    <string name="market_status_pause">已暂停</string>
    <string name="market_status_error">下载失败</string>
    <string name="market_detail_guess_like">下载该应用的人还下载了</string>
    <string name="market_detail_app_detail">应用详情</string>
    <string name="market_detail_friend_like">好友喜欢</string>
    <string name="market_detail_comment_begin">分享感受给好友</string>
    <string name="market_detail_comment_end">人已参与</string>
    <string name="market_detail_version">版本：</string>
    <string name="market_detail_update">更新：</string>
    <string name="market_detail_language">语言：</string>
    <string name="market_detail_author">作者：</string>
    <string name="market_detail_source">来源：</string>
    <string name="market_detail_category">类别：</string>
    <string name="market_detail_times">万次</string>
    <string name="market_detail_time">次</string>
    <string name="market_detail_download">下载：</string>
    <string name="market_detail_go_recomment">看好友在玩啥</string>
    <string name="market_detail_weibo_comment">微博点评(共%d条)</string>
    <string name="market_detail_weibo_offical_comment">官方微博</string>
    <string name="market_detail_switch">换一换</string>
    <string name="market_detail_expand">展开</string>
    <string name="market_detail_app_more">好友热用Top100</string>
    <string name="market_detail_comment_more">更多点评</string>
    <string name="market_detail_fans_number">粉丝：%d</string>
    <string name="market_detail_report">一键举报</string>
    <string name="market_detail_comment_title">应用点评</string>
    <string name="market_search_hint">请输入搜索信息</string>
    <string name="market_search_topn">好友正在搜</string>
    <string name="market_download_empty_hint">木有下载记录</string>
    <string name="market_download_empty_button">淘应用，走起</string>
    <string name="market_update_empty_hint">木有待更新应用</string>
    <string name="market_update_ingored_title">已忽略(%d)</string>
    <string name="market_update_header_all">一键更新</string>
    <string name="market_update_header_hint">可更新(%d)</string>
    <string name="market_update_group_recommend">装机必备(%1$s)</string>
    <string name="market_download_noti_update_title">新浪应用中心</string>
    <string name="market_download_noti_update_titck_text">应用市场更新</string>
    <string name="market_download_noti_update_details">%d款应用添加了新功能，快来看看吧！</string>
    <string name="market_download_noti_totle_num">共%d款应用</string>
    <string name="market_download_noti_completed_num">，%d个已完成。</string>
    <string name="market_download_noti_failed_num">%d个下载失败</string>
    <string name="market_download_noti_begin">%s开始下载</string>
    <string name="market_download_noti_succeed">下载成功</string>
    <string name="market_download_noti_failed_name">%s下载失败</string>
    <string name="market_download_noti_all_completed">全部下载完成</string>
    <string name="market_download_noti_status_unknown">未知状态</string>
    <string name="market_pc_push_noti_title">您有新的应用未下载</string>
    <string name="market_pc_push_noti_tickettext">点击查看</string>
    <string name="market_pc_push_noti_downloading">正在下载：</string>
    <string name="market_app_has_been_uninstalled">该应用已经被卸载，请重新下载</string>
    <string name="makret_app_file_deleted">安装文件不存在，请重新下载</string>
    <string name="weibo_about">关于</string>
    <string name="weibo_feedback">意见反馈</string>
    <string name="menu_settings">设置</string>
    <string name="login_user">登 录 名</string>
    <string name="login_pass">密		码</string>
    <string name="login_pass_comf">密码确认</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="ok">确定</string>
    <string name="setting_vibrator">振动提醒</string>
    <string name="setting_autoload_more">自动加载“更多”</string>
    <string name="setting_autoload_more_desc">到达列表底部时自动加载“更多”微博。</string>
    <string name="please_fill_info">请完善您的资料:</string>
    <string name="nickname">昵		称</string>
    <string name="sex">性		别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="preferences_clear_cache_title">清除缓存</string>
    <string name="preferences_clear_cache_summary">清除缓存:包括用户信息、微博信息、图片等。</string>
    <string name="pref_setting_notify">提醒设置</string>
    <string name="pref_setting_notify_summary">包括:私信、@我、评论、新粉丝、通知</string>
    <string name="reg_domain">\@3g.sina.cn</string>
    <string name="setting_title_remark">显示备注信息</string>
    <string name="setting_summary_remark">显示对关注用户设置的备注信息</string>
    <string name="setting_title_auto_remind">推送通知</string>
    <string name="setting_summary_off_auto_remind">关闭推送通知</string>
    <string name="setting_summary_on_auto_remind">启用推送通知</string>
    <string name="setting_title_auto_remind_setting">消息提醒</string>
    <string name="setting_summary_off_vibrator">关闭振动提醒</string>
    <string name="setting_summary_on_vibrator">启用振动提醒</string>
    <string name="setting_summary_off_audio">关闭铃声提醒</string>
    <string name="setting_summary_on_audio">启用铃声提醒</string>
    <string name="setting_title_audio">铃声提醒</string>
    <string name="setting_title_generic_setting">通用设置</string>
    <string name="setting_bind_uc">绑定UC浏览器</string>
    <string name="setting_bind_uc_desc">默认使用UC浏览器作为外部浏览器。</string>
    <string name="setting_url_open_internal">使用内置浏览器</string>
    <string name="setting_url_open_internal_desc">默认使用内置浏览器打开链接。</string>
    <string name="setting_key_switch_language">switch_language</string>
    <string name="setting_title_language">语言</string>
    <string name="setting_summary_language">切换语言</string>
    <string name="switch_tips">切换语言时，微博会自动重启。</string>
    <string name="language_auto">自动</string>
    <string name="setting_title_picture_setting">图片质量设置</string>
    <string name="setting_title_auto_opt">Wifi自动优化</string>
    <string name="setting_summary_auto_opt">Wifi网络环境下自动优化图片的上传下载清晰度。</string>
    <string name="setting_title_upload">上传图片设置</string>
    <string name="setting_summary_upload">上传图片质量</string>
    <string name="setting_title_doownload">下载图片设置</string>
    <string name="setting_summary_doownload">下载图片质量</string>
    <string name="weibo_account_manage">帐号管理</string>
    <string name="weibo_officialweibo">官方微博</string>
    <string name="setting_screenorientation">横竖屏自动切换</string>
    <string name="setting_screenorientation_desc">当手机横过来时，是否自动切换横竖屏显示方式</string>
    <string name="regist_weibo">开通微博</string>
    <string name="setting_fast_scroll_bar">开启快速拖动</string>
    <string name="setting_fast_scroll_bar_desc">浏览列表时可使用拖动条快速拖动。</string>
    <string name="regist_hint_account">4-20位字母和数字组合</string>
    <string name="regist_hint_password">6-16位字母和数字组合</string>
    <string name="regist_hint_confirm_password">确认密码</string>
    <string name="regist_hint_nick">4-20个字符，英文、数字</string>
    <string name="skin_menu_night">夜间模式</string>
    <string name="skin_menu_night_close">日间模式</string>
    <string name="setting_slient_period">静音时间段</string>
    <string name="language_chinese_simplify">简体中文</string>
    <string name="language_chinese_traditional">繁体中文</string>
    <string name="language_english">English</string>
    <string name="download_image_quality_high">high</string>
    <string name="language_value_auto">auto</string>
    <string name="project_mode">工程模式</string>
    <string name="new_wm">新WM值</string>
    <string name="new_wm_hint">请输入新WM值</string>
    <string name="new_from">新FROM值</string>
    <string name="new_from_hint">请输入新FROM值</string>
    <string name="new_port_hint">请输入新端口值</string>
    <string name="new_server">服务器</string>
    <string name="new_port">端口</string>
    <string name="projectmode_ok">确认</string>
    <string name="projectmode_memory">内存</string>
    <string name="projectmode_cancel">取消</string>
    <string name="vm_value">当前WM值</string>
    <string name="version_value">当前版本</string>
    <string name="default_settings">默认值</string>
    <string name="project_push_enable">Push 开关</string>
    <string name="project_appmarket_enable">应用市场 开关</string>
    <string name="project_dianxin_enable">点信 开关</string>
    <string name="project_popupsdk_enable">Popupsdk 开关</string>
    <string name="project_logall_enable">强制记录crash、neterr、actlog等日志</string>
    <string name="project_memory_debug">内存测试</string>
    <string name="project_url_log">记录url请求.日志存放在sd卡/sina/weibo/weibolog文件夹下，每个文件最多1M，点击发送邮件按钮可以邮件附件形式发送最近一个log</string>
    <string name="project_sendemail">发送邮件</string>
    <string name="project_navigator_reset">引导重置</string>
    <string name="project_shortcut">是否在帐号管理页面显示工程模式快捷方式</string>
    <string name="project_theme_pkg_name">测试皮肤包名</string>
    <string name="project_theme_pkg_name_hint">请输入测试皮肤包名</string>
    <string name="project_add_test_theme">添加皮肤</string>
    <string name="project_test_theme">测试皮肤开关</string>
    <string name="project_upload_server">分段上传服务器正式接口</string>
    <string name="project_upload_server_80">分段上传服务器80接口</string>
</resources>