<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="9.0dip" android:paddingRight="9.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="vertical" android:id="@id/rgLanguage" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textColor="#ff000000" android:id="@id/rbAuto" android:background="@drawable/list_above_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:button="@null" android:text="@string/language_auto" android:drawableRight="@drawable/check_box_bg" />
        <RadioButton android:textColor="#ff000000" android:id="@id/rbChineseSimplify" android:background="@drawable/circle_list_middle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/language_chinese_simplify" android:drawableRight="@drawable/check_box_bg" />
        <RadioButton android:textColor="#ff000000" android:id="@id/rbChineseTraditional" android:background="@drawable/circle_list_middle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/language_chinese_traditional" android:drawableRight="@drawable/check_box_bg" />
        <RadioButton android:textColor="#ff000000" android:id="@id/rbEnglish" android:background="@drawable/list_below_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/language_english" android:drawableRight="@drawable/check_box_bg" />
    </RadioGroup>
    <TextView android:textColor="@color/settings_desc_color" android:gravity="center_horizontal" android:id="@id/tvSwitchTips" android:paddingLeft="@dimen/settings_margin_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/switch_tips" style="@style/main_settings_style" />
</LinearLayout>